cluster/apps/networking/ingress-tunnel/app/vps-route.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frps-dashboard
  namespace: networking
spec:
  type: ExternalName
  externalName: vps-direct.${SECRET_DOMAIN}
  ports:
    - name: http
      port: 7500
      targetPort: 7500
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frps-dashboard
  namespace: networking
spec:
  parentRefs:
    - name: internal-gateway
      namespace: networking
  hostnames:
    - "frps-dashboard.home.${SECRET_DOMAIN}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: rfc1918-ips
      backendRefs:
        - name: frps-dashboard
          port: 7500
